--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportHeight="108"
+    android:tint="#A8C22E">
+    <group android:scaleX="2.2968"
+        android:scaleY="2.2968"
+        android:translateX="26.4384"
+        android:translateY="26.4384">
+        <path
+            android:fillColor="@android:color/white"
+            android:pathData="M21,11.18V9.72c0,-0.47 -0.16,-0.92 -0.46,-1.28L16.6,3.72C16.22,3.26 15.66,3 15.06,3H3C1.9,3 1,3.9 1,5v8c0,1.1 0.9,2 2,2h0.18C3.6,16.16 4.7,17 6,17s2.4,-0.84 2.82,-2h8.37c0.41,1.16 1.51,2 2.82,2c1.66,0 3,-1.34 3,-3C23,12.7 22.16,11.6 21,11.18zM18.4,9H16V6.12L18.4,9zM3,5h4v4H3V5zM6,15c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1s1,0.45 1,1S6.55,15 6,15zM9,13v-2h3V9H9V5h5v8H9zM20,15c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1s1,0.45 1,1S20.55,15 20,15z"/>
+        <path
+            android:fillColor="@android:color/white"
+            android:pathData="M7,20l4,0l0,-2l6,3l-4,0l0,2z"/>
+    </group>
 </vector>
